# mp3enc

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  audiostream.hpp  encoder-pool.cpp  encoder-pool.hpp  encoder.hpp  exception.hpp  file.hpp  glob-posix.cpp  glob-win32.cpp  glob.hpp  main.cpp  mp3enc.cpp  mp3encoder.cpp  mp3encoder.hpp  mp3stream.hpp  mutex.hpp  platform-posix.cpp  platform-posix.hpp  platform-win32.cpp  platform-win32.hpp  platform.hpp  riff.hpp  utils.hpp  wavfile.cpp  wavfile.hpp  wavqueue.hpp  wavstream.hpp
vstudio/: config.h  mp3enc.sln  mp3enc.vcxproj  mp3enc.vcxproj.filters  pthreads4w.vcxproj
